[gd_scene load_steps=2 format=3 uid="uid://3k123r2175jf"]

[ext_resource type="Script" path="res://Scripts/InventorySlot.gd" id="1_omojo"]

[node name="InventorySlot" type="Panel"]
custom_minimum_size = Vector2(50, 50)
anchors_preset = -1
anchor_left = -0.013
anchor_top = -0.023
anchor_right = 0.013
anchor_bottom = 0.023
offset_left = 24.96
offset_top = 24.84
offset_right = -24.96
offset_bottom = -24.84
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_omojo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(25, 25)
scale = Vector2(1.96, 1.96)

[node name="ItemLevelLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.82
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -15.0
offset_right = -13.0
grow_horizontal = 2
grow_vertical = 2
text = "Lvl"

[node name="ItemLevel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.82
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -15.0
grow_horizontal = 2
grow_vertical = 2
text = "
"
